updated server.js, working on post method

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -184,32 +184,14 @@
 </html>
 
 <script type="text/javascript">
-    $(".submit").on("click", function (event) {
+
+    $(".submit").on("click", function(event) {
         event.preventDefault();
-        <div class="modal" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Best Match</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <h3 id="friend-match-name"> </h3>
-                        <img id="friend-match-picture" src=""> </img>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         var newFriend = {
-            name = $("#name").val(),
-            photo = $("#photo").val(),
-            scores =[
+            name: $("#name").val(),
+            photo: $("#photo").val(),
+            scores: [
                 $("#q1").val(),
                 $("#q2").val(),
                 $("#q3").val(),
@@ -223,18 +205,40 @@
             ]
         };
 
-        $.post("api/friends", newFriend, function(data) {
-            if (data) {
-            $("#friend-match-name").text(data.name);
-            $("#friend-match-pic").attr("src", data.photo);
-            //needs to go to through comparison loop and display results on modal//
-            
-            $("#friend-match-name").val("");
-            $("friend-match-pic").val("");
-            } else {
-                alert("Sorry, please fill in all sections of the survey!");
-            }
-        })
+        console.log(newFriend);
+        // <div class="modal" tabindex="-1" role="dialog">
+        //     <div class="modal-dialog" role="document">
+        //         <div class="modal-content">
+        //             <div class="modal-header">
+        //                 <h5 class="modal-title">Best Match</h5>
+        //                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        //                     <span aria-hidden="true">&times;</span>
+        //                 </button>
+        //             </div>
+        //             <div class="modal-body">
+        //                 <h3 id="friend-match-name"> </h3>
+        //                 <img id="friend-match-picture" src=""> </img>
+        //             </div>
+        //             <div class="modal-footer">
+        //                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        //             </div>
+        //         </div>
+        //     </div>
+        // </div>
+
+        $.post("api/friends", newFriend,
+            function (data) {
+                if (data == true) {
+                    $("#friend-match-name").text(data.name);
+                    $("#friend-match-pic").attr("src", data.photo);
+                    //needs to go to through comparison loop and display results on modal//
+
+                } else {
+                    alert("Sorry, please fill in all sections of the survey!");
+                }
+                $("#friend-match-name").val("");
+                $("friend-match-pic").val("");
+            })
 
 
     })
