--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -214,16 +214,16 @@
             name: $("#name").val(),
             photo: $("#photo").val(),
             scores: [
-                $("#q1").val(),
-                $("#q2").val(),
-                $("#q3").val(),
-                $("#q4").val(),
-                $("#q5").val(),
-                $("#q6").val(),
-                $("#q7").val(),
-                $("#q8").val(),
-                $("#q9").val(),
-                $("#q10").val()
+                $("#q1").val().trim(),
+                $("#q2").val().trim(),
+                $("#q3").val().trim(),
+                $("#q4").val().trim(),
+                $("#q5").val().trim(),
+                $("#q6").val().trim(),
+                $("#q7").val().trim(),
+                $("#q8").val().trim(),
+                $("#q9").val().trim(),
+                $("#q10").val().trim()
             ]
         };
 
@@ -232,14 +232,14 @@
         $.post("/api/friends", newFriend,
             function (data) {
 
-                $("#friend-match-name").text(data.name);
-                $("#friend-match-pic").attr("src", data.photo);
-                //needs to go to through comparison loop and display results on modal//
+                $("#friend-match-name").text(data.matchName);
+                $("#friend-match-pic").attr("src", data.matchPic);
 
                 $("#friend-match-name").val("");
                 $("friend-match-pic").val("");
 
                 $("results").modal("toggle");
+
             });
 
 
