--- a/public/survey.html
+++ b/public/survey.html
@@ -169,7 +169,7 @@
             </div>
         </form>
         <br>
-        <button class="btn btn-lg btn-danger" type="submit" id="submit">Submit</button>
+        <button class="btn btn-lg btn-danger" type="submit" id="submit" data-toggle="modal" data-target="#myModal"> Submit</button>
         <br>
         <hr>
         <footer class="footer">
@@ -179,16 +179,15 @@
         </footer>
     </div>
 
-    <div class="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
+    <div id="myModal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal fade" class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">You Matched</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div id="modalBody" class="modal-body">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
