update with gitignore

--- a/public/survey.html
+++ b/public/survey.html
@@ -243,8 +243,10 @@ $.post("/api/friends", newFriend, function(data) {
   
             $("#myModal").modal("toggle");
     
+            console.log("updated!")
 });
 });     
+
     </script>
     
 
